# ideal-wages-calculator

./: .gitignore  Cargo.toml  LICENCE  README.md  Trunk.toml  criterias.json  data.csv  data.json  ideal-wages-calculator-1262a02dbd6c2f3b.js  ideal-wages-calculator-1262a02dbd6c2f3b_bg.wasm  ideal-wages-calculator-189f15bc968d8a1c.js  ideal-wages-calculator-189f15bc968d8a1c_bg.wasm  ideal-wages-calculator-28d9c90853efb922.js  ideal-wages-calculator-28d9c90853efb922_bg.wasm  ideal-wages-calculator-2b91e4bd4961dd54.js  ideal-wages-calculator-2b91e4bd4961dd54_bg.wasm  ideal-wages-calculator-71bcbb4b19e38905.js  ideal-wages-calculator-71bcbb4b19e38905_bg.wasm  ideal-wages-calculator-f7771da8876f74805119daff72e5ba0360ba792b00ab3ec5cffdd005111e3bbd7f1159705aef9b6efd592b31ac4934ed.js  ideal-wages-calculator-f7771da8876f74805119daff72e5ba0360ba792b00ab3ec5cffdd005111e3bbd7f1159705aef9b6efd592b31ac4934ed_bg.wasm  ideal-wages-calculator-fed8812f43c28d9c.js  ideal-wages-calculator-fed8812f43c28d9c_bg.wasm  index-17863f80a4baa7c0.css  index-1c93777628015677.css  index.html  index.scss  serve.py
.github/workflows/: check.yml  deploy-gh-page.yml  pr_check.yml
src/: criterias.rs  data.rs  footer.rs  header.rs  job.rs  job_sliders_component.rs  main.rs  salary_param.rs  slider.rs  slider_component.rs  wages_param.rs
