[package]
name = "ideal-wages-calculator"
version = "0.1.0"
edition = "2021"
description = "A webassembly project using trunk and yew to realise injustices in range of wages"
readme = "README.md"
repository = "https://github.com/ad2ien/ideal-wages-calculator"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2"
log = "0.4.6"
wasm-logger = "0.2.0"
yew = { version="0.20", features=["csr"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "HtmlElement",
    "DomRect",
    "EventTarget",
    "HtmlInputElement",
    "HtmlSelectElement"
]